<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context=".MainActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/custName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:hint="@string/customer_name"
                android:inputType="textPersonName"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/custLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:hint="@string/customer_location"
                android:inputType="textPersonName"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/custNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:hint="@string/contact_number"
                android:inputType="phone"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/custEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/custDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:hint="@string/department"
                android:inputType="textPersonName"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/discussion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:hint="@string/discussion"
                android:inputType="textPersonName"
                android:minLines="4"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/actionPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:hint="@string/action_plan"
                android:inputType="textPersonName"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/timeline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/timeline"
                android:inputType="textPersonName"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/colorPrimary"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/agentRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:hint="@string/remarks"
                android:inputType="textPersonName"
                android:paddingBottom="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>